# FluxMedia-py

./: .gitignore  CHANGELOG.md  README.md  fluxmedia_aio.py  fluxmedia_linux.sh  fluxmedia_windows.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fluxmedia/: __init__.py  main.py
