[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmedia"
version = "1.4.3"
description = "FluxMedia - Cross-platform Command-Line Media Downloader"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "yt-dlp>=2025.2.18",
]

[project.urls]
Homepage = "https://github.com/pdev-labs/FluxMedia-py"

[project.scripts]
fluxmedia = "fluxmedia.main:main"
